Fix highlight styles for dark modes

--- a/src/global.scss
+++ b/src/global.scss
@@ -75,6 +75,7 @@ ion-avatar.big-avatar  {
 }
 
 .highlighted-by-link {
+  transition: .3s;
   animation-name: backgroudPulse;
   animation-duration: 2s;
   animation-iteration-count: 1;
@@ -82,13 +83,13 @@ ion-avatar.big-avatar  {
 
 @keyframes backgroudPulse {
   0% {
-    background-color: var(--ion-color-light);
+    background-color: var(--background);
   }
-  50% {
+  75% {
     background-color: rgba(var(--ion-color-primary-rgb), .2);
   }
   100% {
-    background-color: var(--ion-color-light);
+    background-color: var(--background);
   }
 }
 
